[project]
name = "posters-2"
version = "0.1.0"
description = ""
authors = [
    {name = "Lukas-Vasionis",email = "l.vasionis@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy (>=2.2.5,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "plotly (>=6.1.0,<7.0.0)",
    "streamlit (>=1.45.1,<2.0.0)",
    "streamlit-extras (>=0.7.1,<0.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
